# SerialPipe-rust

./: .appveyor.yml  Cargo.toml  README.md  build.rs
shim/: shim.h  shim_unix.c
src/: device.rs  error.rs  main.rs
tests/: compile.rs
